fixed wood spacing

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ top: 14px;
 	padding-left: 20px;
 	padding-right: 20px;
 	text-align: center;
-    font-size: 38px
+  font-size: 38px;
 }
 
 .gum {
@@ -92,7 +92,8 @@ top: 14px;
 }
 
 .ab-content {
-    padding: 150px 0;
+    margin-top: 25px;
+    padding: 120px 0;
     font-size: 2.2em;
 }
 
